styles.css
@import url("https://fonts.googleapis.com/css2?family=Tiny5&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Tiny5", Arial, Helvetica, sans-serif;
}

h1 {
  color: #fde514;
  font-size: 56px;
  text-align: center;
}

.container {
  background-color: #f5011a;
  width: 100%;
  min-height: 100vh;
  padding: 32px 16px;
}

.grid-container {
  display: flex;
  flex-wrap: wrap;
  max-width: 960px;
  height: 0;
  width: 100%;
  margin: 0 auto;
  padding-bottom: 100%;
  background-color: #cccfce;
}

.box {
  height: 0;
  width: calc(100% / 16);
  padding-bottom: calc(100% / 16);
}

